grammar.js
    manifest: $ => seq(
      $.main_section,
      repeat($.individual_section),
    ),

    // ----------------------------------------------------------------------
    //  main_section – attributes before the first "Name:" header
    //
    //    [SPEC] main-section: version-info newline *main-attribute
    //    [JDK]   Parsed by attr.read() before the entry loop.
    //
    //  Must contain at least one node (Manifest-Version is mandatory).
    //  continuation_line at this level only matches misplaced continuations
    //  (a line starting with SPACE before any attribute_entry).  Valid
    //  continuations are nested inside header_value (see attribute_entry).
    // ----------------------------------------------------------------------
    main_section: $ => repeat1(choice(
      $.attribute_entry,       // key: value (continuations nested inside)
      $.continuation_line,     // misplaced continuation (error recovery)
    )),

    // ----------------------------------------------------------------------
    //  individual_section – per-entry attributes delimited by "Name:"
    //
    //    [SPEC] individual-section: Name : value newline *perentry-attribute
    //    [JDK]   Each iteration of the read() loop creates a new entry
    //            when parseName() succeeds.
    //
    //  Structure: a section_name_header followed by zero or more
    //  attribute_entry nodes (continuations are nested inside header_value).
    //  An empty section (Name header only, no attributes) is legal.
    // ----------------------------------------------------------------------
    individual_section: $ => seq(
      $.section_name_header,   // "Name: <path>" delimiter
      repeat($.attribute_entry),
    ),

    // ----------------------------------------------------------------------
    //  section_name_header – the "Name:" delimiter + its value
    //
    //    [SPEC] Not in BNF, but implied by individual-section.
    //    [JDK]   parseName() checks: [Nn][Aa][Mm][Ee]':' ' '
    //            If followed by SPACE on the next line, the name is folded.
    //
    //  prec.right: greedy consumption of continuation lines into the
    //  section name (section_name_continuation).  This matches [JDK]
    //  parseName() which eagerly reads continuation lines into the name
    //  buffer until a non-continuation line is encountered.
    //
    //  Example normal:
    //    Name: com/example/MyClass.class
    //
    //  Example folded:
    //    Name: com/example/
    //     folded/path.class
    //  → section_name = "com/example/"
    //  → section_name_continuation = "folded/path.class"
    //  → logical name = "com/example/folded/path.class"
    // ----------------------------------------------------------------------
    section_name_header: $ => prec.right(seq(
      // Case-insensitive "Name" ([JDK] toLower-based comparison)
      /[Nn][Aa][Mm][Ee]/,
      ': ',                                              // colon + space (required)
      field('name', $.section_name),                     // path/URL value
      repeat($.section_name_continuation),               // folded continuation lines
    )),

    // ----------------------------------------------------------------------
    //  section_name – the path/URL value on a "Name:" line
    //
    //    [SPEC] otherchar: any UTF-8 character except NUL, CR, LF
    //
    //  token.immediate: no whitespace matching inside the token.
    //  Matches one line worth of non-NUL, non-newline characters.
    // ----------------------------------------------------------------------
    section_name: $ => token.immediate(/[^\x00\n\r]+/),

    // ----------------------------------------------------------------------
    //  section_name_continuation – continuation line for a folded "Name:"
    //
    //    [JDK] If the byte after a name line is SPACE (0x20), parseName()
    //          appends it to the name buffer (lastline).  Multiple
    //          continuation lines are supported.
    //
    //  Starts with a literal space (matched from extras), followed by
    //  the continuation value.
    // ----------------------------------------------------------------------
    section_name_continuation: $ => seq(
      ' ',                                                // leading space
      token.immediate(/[^\x00\n\r]*/),                  // folded name fragment
    ),

    // ----------------------------------------------------------------------
    //  header_value – wrapper for value + continuations
    //
    //    Groups attribute_value and following continuation_line nodes
    //    into a single named node.  This allows editor incremental
    //    selection (e.g. vim's @string capture) to select the complete
    //    value across multiple lines.
    //
    //  Contains exactly one attribute_value followed by zero or more
    //  continuation_line nodes.
    //
    //  prec.right: when attribute_value is empty, the parser must
    //  decide whether a leading SPACE belongs to a continuation_line
    //  inside this header_value, or terminates the header_value so the
    //  continuation_line belongs to the enclosing section.  prec.right
    //  biases towards nesting continuations inside the header_value,
    //  matching [JDK] behaviour (continuations are greedily consumed
    //  into the preceding header).
    // ----------------------------------------------------------------------
    attribute_entry: $ => seq(
      field('key', $.attribute_key),
      ': ',                                                // colon + space
      field('value', $.header_value),
    ),

    // ----------------------------------------------------------------------
    //  continuation_line – a wrapped continuation of the previous value
    //
    //    [SPEC] continuation: SPACE *otherchar newline
    //    [JDK]   Lines starting with 0x20 (SPACE) are appended to the
    //            previous header's value.
    //
    //  The leading space is matched literally (consumed from extras),
    //  followed by the continuation value.  Multiple continuation lines
    //  can appear consecutively for deeply wrapped values.
    // ----------------------------------------------------------------------
    continuation_line: $ => seq(
      ' ',                                                // leading space
      field('value', $.continuation_value),
    ),

    // ----------------------------------------------------------------------
    //  continuation_value – the content of a continuation line
    //
    //    [SPEC] *otherchar  (no leading space, that's consumed separately)
    //
    //  token.immediate: same semantics as attribute_value.
    //  Shared between continuation_line and section_name_continuation.
    // ----------------------------------------------------------------------
    continuation_value: $ => token.immediate(/[^\x00\n\r]*/),

    // ----------------------------------------------------------------------
    //  attribute_key – a header name
    //
    //    [SPEC] name: alphanum *headerchar
    //           alphanum:   {A-Z} | {a-z} | {0-9}
    //           headerchar: alphanum | - | _
    //
    //  Characters allowed: [A-Za-z0-9] for the first character,
    //  [A-Za-z0-9_-] for subsequent characters.
    //
    //  Examples: Manifest-Version, Created-By, X-COMM-1, SHA-256-Digest
    //
    //  Also serves as tree-sitter's `word` token for keyword extraction.
    // ----------------------------------------------------------------------
    attribute_key: $ => token(/[A-Za-z0-9][A-Za-z0-9_\-]*/),
  },
});
